# pool_task_runner

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
docs/: api.md  dashboard.md  getting-started.md  index.md  jobs-and-batches.md  operations.md
src/jobrunner/: __init__.py  app.py  auth.py  celery_app.py  cli.py  config.py  database.py  models.py  schemas.py  tasks.py
src/jobrunner/api/: __init__.py  deps.py  router.py
src/jobrunner/api/routes/: admin.py  auth.py  batches.py  health.py  jobs.py  users.py
src/jobrunner/services/: __init__.py  jobs.py  quotas.py
src/jobrunner/templates/: admin_limits.html  batch_detail.html  dashboard.html  job_detail.html
